[package]
name = "packler"
version = "0.1.0"
edition = "2021"
authors = ["Francois Stephany <francois@tamere.eu>"]

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", default-features = false, features = ["full"] }
tokio-stream = { version = "0.1", default-features = false, features = ["fs", "sync"] }
zip = "0.6"
flate2 = "1"
once_cell = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
anyhow = "1.0"
tar = "0.4"
seahash = "4"
which = "4"
directories = "4"
serde= { version= "1", features= ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "trust-dns"] }
cargo_metadata = "0.15"
lazy_static = "1.4.0"
walkdir = "2"
clap = { version = "4", default-features = false, features = ["std", "help", "derive", "cargo"] }
mime_guess = "2"
notify = "5.1"

aws-config = "0.54"
aws-endpoint = "0.54"
aws-sdk-s3 = "0.24"

[dev-dependencies]
tempfile = "3"
