[package]
name = "packler"
description = "Bundle Rust webapps with xtask"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Francois Stephany <francois@tamere.eu>"]

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", default-features = false, features = ["full"] }
tokio-stream = { version = "0.1", default-features = false, features = ["fs", "sync"] }
zip = "0.6"
flate2 = "1"
once_cell = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
anyhow = "1.0"
tar = "0.4"
seahash = "4"
which = "4"
directories = "5"
serde= { version= "1", features= ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "trust-dns"] }
cargo_metadata = "0.15"
lazy_static = "1.4.0"
walkdir = "2"
clap = { version = "4", default-features = false, features = ["std", "help", "cargo"] }
mime_guess = "2"
notify = "5.1"

aws-config = "0.55"
aws-endpoint = "0.55"
aws-sdk-s3 = "0.26"

[dev-dependencies]
tempfile = "3"
